kubernetes/angular/rules-engine-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rules-engine-ui-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "rules-engine-ui.localhost"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rules-engine-ui-service
            port:
              number: 80
